Set photo to flex-start to and flex to inherit to prevent large gap

--- a/hypnoinsight/src/pages/Home/Home.scss
+++ b/hypnoinsight/src/pages/Home/Home.scss
@@ -106,7 +106,9 @@
         &__profile {
             padding: 0 2rem 1.25rem 0;
             order: 1;
-            flex: 1 1;
+            flex: 1 1 inherit;
+            justify-content: flex-start;
+
         }
 
         &__hypnosis {
